docs: create users, decks swagger actions
